# aeat_frappe

./: CONFIG.md  INSTALL.md  README.md  all_workspaces.json  calc_303.py  check_fiscal_year.py  create_invoices.py  create_invoices_api.py  debug_boe.py  error_calc2.json  invoice_results.json  license.txt  pyproject.toml  setup.py  test_api.py  verify_invoices.py  workspace_aeat.json  workspace_check.json  workspace_detail.json  workspaces.json
erpnext_es_aeat/: .gitignore  __init__.py  hooks.py  patches.txt
erpnext_es_aeat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
erpnext_es_aeat/aeat/: __init__.py  boe.py  report_base.py  tax_engine.py
erpnext_es_aeat/aeat/doctype/aeat_boe_export_config/: aeat_boe_export_config.json  aeat_boe_export_config.py
erpnext_es_aeat/aeat/doctype/aeat_boe_export_config_line/: aeat_boe_export_config_line.json  aeat_boe_export_config_line.py
erpnext_es_aeat/aeat/doctype/aeat_mod_111/: aeat_mod_111.js  aeat_mod_111.json  aeat_mod_111.py
erpnext_es_aeat/aeat/doctype/aeat_mod_115/: aeat_mod_115.js  aeat_mod_115.json  aeat_mod_115.py
erpnext_es_aeat/aeat/doctype/aeat_mod_130/: aeat_mod_130.js  aeat_mod_130.json  aeat_mod_130.py
erpnext_es_aeat/aeat/doctype/aeat_mod_303/: aeat_mod_303.js  aeat_mod_303.json  aeat_mod_303.py
erpnext_es_aeat/aeat/doctype/aeat_mod_347/: aeat_mod_347.js  aeat_mod_347.json  aeat_mod_347.py
erpnext_es_aeat/aeat/doctype/aeat_mod_347_line/: aeat_mod_347_line.json  aeat_mod_347_line.py
erpnext_es_aeat/aeat/doctype/aeat_mod_349/: aeat_mod_349.js  aeat_mod_349.json  aeat_mod_349.py
erpnext_es_aeat/aeat/doctype/aeat_mod_349_line/: aeat_mod_349_line.json  aeat_mod_349_line.py
erpnext_es_aeat/aeat/doctype/aeat_mod_390/: aeat_mod_390.js  aeat_mod_390.json  aeat_mod_390.py
erpnext_es_aeat/aeat/doctype/aeat_tax_map/: aeat_tax_map.json  aeat_tax_map.py
erpnext_es_aeat/aeat/doctype/aeat_tax_map_line/: aeat_tax_map_line.json  aeat_tax_map_line.py
erpnext_es_aeat/aeat/workspace/: aeat.json
erpnext_es_aeat/config/: desktop.py
erpnext_es_aeat/setup/: install.py
erpnext_es_aeat/tools/: live_check.py
erpnext_es_aeat/workspace/: aeat.json  aeat_espana.json
regression/: CERTIFICATION.md  frappe_stub.py  last_run_report.txt  run_regression.py
scripts/: provision_linode.sh  remote_bootstrap.sh
