[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_es_aeat"
authors = [
    {name = "BIT Technologies GmbH", email = "info@bit-technologies.eu"}
]
description = "Modelos tributarios españoles (AEAT) para ERPNext: 303, 111, 115, 130, 390, 347 y 349"
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/admbittechnologies/aeat_frappe"

[tool.setuptools]
packages = ["erpnext_es_aeat", "erpnext_es_aeat.aeat", "erpnext_es_aeat.config", "erpnext_es_aeat.setup", "erpnext_es_aeat.tools"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.py", "*.txt", "*.csv", "*.html", "*.js", "*.xml", "*.css", "*.scss", "*.png", "*.jpg", "*.svg"]
