[project]
name = "erpnext_es_aeat"
authors = [
    {name = "BIT Technologies GmbH", email = "info@bit-technologies.eu"}
]
description = "Modelos tributarios españoles (AEAT) para ERPNext: 303, 111, 115, 130, 390, 347 y 349"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "erpnext_es_aeat"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
